buildscript {
    repositories {
        mavenCentral()
        mavenLocal()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath 'org.openjfx:javafx-plugin:0.0.8'
    }
}

apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'org.openjfx.javafxplugin'

javafx {
    version = "11"
    modules = ['javafx.controls', 'javafx.fxml']
}

repositories {
    jcenter()
    mavenCentral()
    mavenLocal()
}

task fatJar(type: Jar) {
    baseName = project.name + '-all'
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
    manifest {
        attributes 'Implementation-Title': 'Gradle Quickstart', 'Implementation-Version': '1.0'
        attributes 'Main-Class': 'de.jensd.fx.glyphs.browser.GlyphsBrowserApp'
    }
}

version '1.3.0'

mainClassName = 'de.jensd.fx.glyphs.browser.GlyphsBrowserApp'
sourceCompatibility = '11'
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

if (!hasProperty('mainClass')) {
    ext.mainClass = 'de.jensd.fx.glyphs.browser.GlyphsBrowserApp'
}

run {
    jvmArgs "--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED", "--add-opens=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED"
}

task execute(type:JavaExec) {
    main = mainClass
    classpath = sourceSets.main.runtimeClasspath
}

dependencies {
    compile 'de.jensd:fontawesomefx-emojione:3.1.1-9'
    compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-9'
    compile 'de.jensd:fontawesomefx-icons525:4.2.0-9'
    compile 'de.jensd:fontawesomefx-materialdesignfont:2.0.26-9'
    compile 'de.jensd:fontawesomefx-materialicons:2.2.0-9'
    compile 'de.jensd:fontawesomefx-octicons:4.3.0-9'
    compile 'de.jensd:fontawesomefx-weathericons:2.0.10-9'
    compile 'de.jensd:fontawesomefx-controls:9.0.0'
    compile 'org.controlsfx:controlsfx:9.0.0'
}
